--- a/plumstylesheet.css
+++ b/plumstylesheet.css
@@ -463,14 +463,14 @@ input {
 
 #email {
     color: #be69a1;
-    z-index: 5;
-    margin-top: 100px;
-    padding-left: 390px;
-    position: absolute;
+    position: relative;
     font-family: 'contax_pro_45_ligregular', Helvetica, Arial, sans-serif;
     font-size: 15px;
     z-index: 5;
-    width: 40%;
     float: right;
-    
+    padding-left: 0px;
+    width: 100px;
+    left: 375px;
+    bottom: 28px;
+
 }
