--- a/plumstylesheet.css
+++ b/plumstylesheet.css
@@ -503,7 +503,12 @@ input {
     padding-left: 0px;
     width: 100px;
     margin-right: 10px;
-    bottom: 28px;
+    bottom: 30px;
     color: #fff;
 
+}
+
+br {
+    display: block;
+    line-height:22px;
 }
