--- a/plumstylesheet.css
+++ b/plumstylesheet.css
@@ -11,7 +11,9 @@ and open the template in the editor.
 
 body {
     background-image: url(images/background.jpg);
+    height: 1200px;
     z-index: -1;
+    margin-bottom: 0px;
     /* margin: 10px; */
 }
 
@@ -22,7 +24,7 @@ body {
     background-color: #fff;
     z-index:0;
     margin-top: -2em;
-    height: 1400px;
+    height: 1200px;
 }
 
 #banner {
@@ -120,6 +122,7 @@ body {
 #tealbar {
     margin-left: -2em;
     width:100%;
+
 }
 
 /* NAVIGATION */
@@ -136,70 +139,49 @@ body {
 
 }
 
-#navigation {
-    display: block;
-    text-align: center;
-    width: 100%;
-}
-
-#menu{
-
+nav {
     height: 35px;
     width: 100%;
-    padding-left: 40px;
-}
-
-ul {
-    list-style-type:none;
-    margin: auto;
-    position: relative;
-    display: block;
-    /*padding-bottom: 1em;*/
+    padding-bottom: 15px; 
     text-align: center;
 }
 
+nav ul {
+    width: 100%;
+    display: inline-block;
+    padding: 0px;
+    margin-left: 30px;
+}
 
-li {
-    display:inline-block;
-    float: left;
-    /* margin-right: 1px; */
+
+ul li {
+    display: table-cell;
+    text-align: center;
 }
 
 ul li a{
     font-family: 'contax_pro_45_ligregular', sans-serif;
     display: inline-block;
     text-align: center;
-    min-width: 100px;
+    width: 100%;
     height: 25px;
-    padding-left: 23px;
+    color: #929395;
+    text-decoration: none;
+    font-size: 13px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 ul li a:hover {
     font-family: 'contax_pro_45_ligregular', sans-serif;
     display: inline-block;
     text-align: center;
-    min-width: 100px;
-    height: 25px;
-    padding-left: 23px;
+    width: 100%;
     color: #be69a1;
-
-
-}
-
-li a {
-    font-family: 'contax_pro_45_ligregular', sans-serif;
-    display:block;
-    height: 35px;
-    text-align: center;
-    line-height: 33px;
-    color: #929395;
     text-decoration: none;
-    /* padding-right: 1em; */
-    padding-left: 1em;
-    font-size: .85em;
-}
+    font-size: 13px;
 
-a {}
+}
 
 
 /*Hover state for dropdown links*/
@@ -259,53 +241,6 @@ input[type=checkbox]:checked ~ #menu{
     display: block;
 }
 
-
-
-
-
-/*Responsive Styles*/
-
-@media screen and (max-width : 760px){
-    /*Make dropdown links appear inline*/
-    .body {
-        width: 80%; 
-    }
-    ul {
-        position: static;
-        display: none;
-    }
-    /*Create vertical spacing*/
-    li {
-        margin-bottom: 1px;
-    }
-    /*Make all menu links full width*/
-    ul li {
-        width: 100%;
-        height: 40px;
-        line-height: 40px;
-    }
-
-    li a {
-        width: 100%;
-        height: 40px;
-        line-height: 40px;
-        padding: 0em;
-        text-align: left; 
-    }
-
-
-    /*Display 'show menu' link*/
-    .show-menu {
-        display: block;
-    }
-
-    #homepp {
-        position: absolute;
-        margin-bottom: -50px;  
-        z-index: 2;
-        margin-right: 5.5em;
-    }
-}
 
 
 /**************FOOTER***************/
@@ -419,7 +354,7 @@ button {
 }
 
 
- 
+
 #emailsignup p {
     padding-left: 43px;
     padding-bottom: -20px;
@@ -439,7 +374,7 @@ input {
     margin-left: 43px;
     float: left;
     position: relative; 
-    
+
 }
 
 .footertext a {
@@ -489,7 +424,7 @@ input {
     z-index: 5;
     width: 40%;
     float: left;
- 
+
 
 }
 
@@ -511,4 +446,249 @@ input {
 br {
     display: block;
     line-height:22px;
+}
+
+/******************************/
+/*Responsive Styles*/
+/*****************************/
+
+
+@media screen and (max-width : 760px){
+    /*Make dropdown links appear inline*/
+    .body {
+        width: 80%; 
+        height: 100%;
+    }
+    ul {
+        position: static;
+        display: none;
+    }
+    /*Create vertical spacing*/
+    li {
+        margin-bottom: 1px;
+    }
+    /*Make all menu links full width*/
+    ul li {
+        width: 100%;
+        height: 40px;
+        line-height: 40px;
+    }
+
+    li a {
+        width: 100%;
+        height: 40px;
+        line-height: 40px;
+        padding: 0em;
+        text-align: left; 
+    }
+
+
+    /*Display 'show menu' link*/
+    .show-menu {
+        display: block;
+    }
+
+    #homepp {
+        position: absolute;
+        margin-bottom: -50px;  
+        z-index: 2;
+        margin-right: 5.5em;
+    }
+
+    #footer {
+        background-color: #fff;
+    }
+
+    #rightside {
+        float: right;
+        width: 50%;
+        background-color: #fff;
+        padding-bottom: 50px;
+        padding-top: 5px;
+
+    }
+
+    #right {
+        float: right;
+        display: inline-block;
+        padding-right: 3em;
+    }
+
+    .socialicon {
+        width: 30px; 
+    }
+
+    #leftside {
+        float: left;
+        width: 50%;
+        display: inline-block;
+        background-color: #fff;
+        padding-bottom: 50px;
+
+    }
+
+    button {
+        width: 90px;
+        background: transparent;
+        border: none;
+        margin-top: 5px;
+        margin-left: 37px;
+    }
+
+    #joinnow img {
+        width: 100%; 
+    }
+
+    .footertext {
+        font-family: 'contax_pro_45_ligregular', Helvetica, Arial, sans-serif;
+        font-size: .75em;
+        color: #929395;
+    }
+
+    #changesreturns {
+        float:right;
+        color: #929395;
+    }
+
+    #rightabout {
+        float: right;
+        color: #929395;
+    }
+
+    #changesreturns a{
+        color: #929395;
+    }
+
+    #rightabout a{
+        color: #929395;
+    }
+
+    #socialbuttons {
+        padding-left: 240px;
+        float: left;
+        width: 110px;
+        padding-top: 15px;
+    }
+
+    #socialbuttons img {
+        padding-left: 2px;
+        padding-right: 2px;
+    }
+
+    #center {
+
+        width: 76px;
+
+        float: right;
+
+        margin-right: 40px;
+    }
+
+    #right {
+
+        width: 76px;
+
+        padding-right: .5em;
+        margin-left: -90px;
+        margin-right: -10px;
+    }
+
+    #right img{
+
+        margin-top: 5px;
+
+    }
+
+    #center img{
+        margin-left: 10px;
+        margin-top: 5px;
+    }
+
+
+
+    #emailsignup p {
+        padding-left: 43px;
+        padding-bottom: -20px;
+        font-size: 11px;
+
+
+    }
+
+    input:placeholder-shown {
+        font-family: 'contax_pro_45_ligregular', Helvetica, Arial, sans-serif;
+        font-size: .75em;
+    }
+
+    input {
+        width: 150px; 
+        height: 20px;
+        margin-left: 43px;
+        float: left;
+        position: absolute; 
+
+    }
+
+    .footertext a {
+        text-decoration: none;
+    }
+
+    #socialbuttons a {
+        text-decoration: none;
+    }
+
+
+
+    /***tealbar***/
+
+    #tealbartext {
+        width: 100%; 
+        display: inline-block;
+        position: absolute;
+        z-index: 5;
+    }
+
+    #tealbar {
+        position: absolute;
+    }
+
+    #email a {
+
+        text-decoration: none;
+        color: #fff;
+    }
+
+    #copywrite {
+        color: #fff;
+        z-index: 5;
+        margin-top: 100px;
+        padding-left: 10px;
+        position: absolute;
+        font-family: 'contax_pro_45_ligregular', Helvetica, Arial, sans-serif;
+        font-size: 15px;
+        z-index: 5;
+        width: 40%;
+        float: left;
+
+
+    }
+
+    #email {
+
+        position: absolute;
+        font-family: 'contax_pro_45_ligregular', Helvetica, Arial, sans-serif;
+        font-size: 15px;
+        z-index: 5;
+        float: right;
+        padding-left: 0px;
+        width: 100px;
+        margin-right: 10px;
+        bottom: 30px;
+        color: #fff;
+
+    }
+
+    br {
+        display: block;
+        line-height:22px;
+    }
 }
