--- a/plumstylesheet.css
+++ b/plumstylesheet.css
@@ -24,7 +24,7 @@ body {
     background-color: #fff;
     z-index:0;
     margin-top: -2em;
-    height: 1200px;
+    height: 1300px;
 }
 
 #banner {
@@ -39,10 +39,11 @@ body {
 }
 
 .upperdivider img {
-    position: relative; 
+    position: absolute; 
     display: block;
-    margin: auto; 
-    width: 92%; 
+    margin-left: 45px; 
+    text-align: center;
+    width: 1010px; 
 }
 
 #logo {
@@ -69,17 +70,18 @@ body {
 
 #handmade {
     width: 30%; 
+    padding-left: 6px;
 }
 
 #roundbuttons {
     display: inline-block;
     /* margin: auto; */
-    width: 100%;
+    width: 1100px;
     padding-top: .5em;
     text-align: center; 
     margin-top: 4em;
     z-index:3; 
-    position: relative; 
+    position: absolute; 
 
 }
 
@@ -112,11 +114,11 @@ body {
 }
 
 .footerdivider img{
-    padding-top: 2em;
-    position: relative; 
+    position: absolute; 
     display: block;
-    margin: auto; 
-    width: 92%; 
+    margin-left: 45px; 
+    text-align: center;
+    width: 1010px; 
 }
 
 #tealbar {
@@ -282,10 +284,12 @@ button {
     background: transparent;
     border: none;
     margin-top: -1px;
+    margin-left: 200px;
 }
 
 #joinnow img {
     width: 100%; 
+    
 }
 
 .footertext {
@@ -373,7 +377,7 @@ input {
     height: 20px;
     margin-left: 43px;
     float: left;
-    position: relative; 
+    position: absolute; 
 
 }
 
@@ -430,16 +434,20 @@ input {
 
 #email {
 
-    position: relative;
+    position: absolute;
     font-family: 'contax_pro_45_ligregular', Helvetica, Arial, sans-serif;
     font-size: 15px;
-    z-index: 5;
+    z-index: 6;
     float: right;
     padding-left: 0px;
     width: 100px;
-    margin-right: 10px;
     bottom: 30px;
     color: #fff;
+    bottom: auto;
+    margin-right: 0px;
+    margin-left: 990px;
+    margin-top: 100px;
+
 
 }
 
@@ -448,6 +456,13 @@ br {
     line-height:22px;
 }
 
+#end {
+    position: absolute;
+    width: 1500px;
+    margin-top:80px;
+    margin-left: -750px;
+    height: 65px;    
+}
 /******************************/
 /*Responsive Styles*/
 /*****************************/
@@ -496,6 +511,7 @@ br {
     }
 
     #footer {
+        margin-top: 450px;
         background-color: #fff;
     }
 
