--- a/plumstylesheet.css
+++ b/plumstylesheet.css
@@ -127,7 +127,16 @@ body {
 
 }
 
+
+
+
+/**************/
 /* NAVIGATION */
+/****~~~~~~~~*/
+
+
+
+
 @font-face {
     font-family: 'contax_pro_45_ligregular';
     src: url('font/contaxpro45lig-webfont.eot');
@@ -152,7 +161,7 @@ nav ul {
     width: 100%;
     display: inline-block;
     padding: 0px;
-    margin-left: 30px;
+    margin-left: 45px;
 }
 
 
@@ -185,26 +194,32 @@ ul li a:hover {
 
 }
 
+ul li:hover ul a {
+	background: #f3f3f3;
+	color: #2f3036;
+	height: 40px;
+	line-height: 40px;
+}
 
 /*Hover state for dropdown links*/
-li:hover ul a:hover {
+ul li:hover ul a:hover {
     background: #19c589;
     color: #fff;
 
 }
 
 /*Hide dropdown links until they are needed*/
-li ul {
+ul li ul {
     display: none;
 }
 
 /*Make dropdown links vertical*/
-li ul li {
+ul li ul li {
     display: block;
     float: none;
 }
 
-li ul li a {
+ul li ul li a {
     width: auto;
     min-width: 100px;
     padding: 0 20px;
@@ -218,16 +233,12 @@ ul li a:hover + .hidden, .hidden:hover {
 }
 
 
-/*.hidden a{
- text-align: left;
-}
-*/
 /*Style 'show menu' label button and hide it by default*/
 .show-menu {
     font-family: 'contax_pro_45_ligregular', Helvetica, Arial, sans-serif;
     text-decoration: none;
     color: #fff;
-    background: #19c589;
+    background: #a4ddca;
     text-align: center;
     padding: 10px 0;
     display: none;
@@ -249,15 +260,15 @@ input[type=checkbox]:checked ~ #menu{
 
 #footer {
     background-color: #fff;
+    margin-top: 450px;
 }
 
 #rightside {
     float: right;
     width: 50%;
     background-color: #fff;
-    padding-bottom: 50px;
+    /* padding-bottom: 50px; */
     padding-top: 5px;
-
 }
 
 #right {
@@ -275,8 +286,7 @@ input[type=checkbox]:checked ~ #menu{
     width: 50%;
     display: inline-block;
     background-color: #fff;
-    padding-bottom: 50px;
-
+    /* padding-bottom: 50px; */
 }
 
 button {
@@ -289,7 +299,7 @@ button {
 
 #joinnow img {
     width: 100%; 
-    
+
 }
 
 .footertext {
@@ -363,8 +373,8 @@ button {
     padding-left: 43px;
     padding-bottom: -20px;
     font-size: 11px;
-
-
+    width: 150px;
+    margin-top: 10px;
 }
 
 input:placeholder-shown {
@@ -393,23 +403,6 @@ input {
 
 /***tealbar***/
 
-#tealbartext {
-    width: 100%; 
-    display: inline-block;
-    position: absolute;
-    z-index: 5;
-}
-
-
-#tealbar {
-    width: 75px;
-    display: block;
-    margin-left: -500px;
-    margin-top: 4.5em;
-    z-index: 4;
-    position: absolute;
-    height: 65px;
-}
 
 #email a {
     float: right;
@@ -428,8 +421,6 @@ input {
     z-index: 5;
     width: 40%;
     float: left;
-
-
 }
 
 #email {
@@ -457,98 +448,101 @@ br {
 }
 
 #end {
-    position: absolute;
-    width: 1500px;
-    margin-top:80px;
-    margin-left: -750px;
-    height: 65px;    
+    
+    width: 100%;
+    height: 150px;
+    z-index: 3;
+
+    background-color: #a4ddca;
 }
+
+
+
+
+
+
+
+
+
 /******************************/
 /*Responsive Styles*/
 /*****************************/
 
 
-@media screen and (max-width : 760px){
+@media screen and (max-width : 900px){
     /*Make dropdown links appear inline*/
     .body {
-        width: 80%; 
+        width: 90%; 
         height: 100%;
     }
-    ul {
-        position: static;
+
+    /** grey lines 8**/
+    .footerdivider {
         display: none;
     }
-    /*Create vertical spacing*/
-    li {
-        margin-bottom: 1px;
-    }
-    /*Make all menu links full width*/
-    ul li {
-        width: 100%;
-        height: 40px;
-        line-height: 40px;
-    }
 
-    li a {
-        width: 100%;
-        height: 40px;
-        line-height: 40px;
-        padding: 0em;
-        text-align: left; 
-    }
-
-
-    /*Display 'show menu' link*/
-    .show-menu {
-        display: block;
+    .upperdivider {
+        display: none; 
     }
 
     #homepp {
-        position: absolute;
-        margin-bottom: -50px;  
-        z-index: 2;
-        margin-right: 5.5em;
+        display: none;
     }
 
+    #roundbuttons {
+        width: 90%; 
+        display: inline; 
+        padding: 0px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }    
+/****FOOTER*****/  
+
+
     #footer {
-        margin-top: 450px;
+        margin-top: 250px;
         background-color: #fff;
+        width: 100%;
     }
 
     #rightside {
         float: right;
-        width: 50%;
+        width: 100%;
         background-color: #fff;
-        padding-bottom: 50px;
-        padding-top: 5px;
-
+        padding-bottom: 5px;
+        /* padding-top: 10px; */
+        padding-left: 10px;
+        margin-top: 140px;
     }
 
     #right {
         float: right;
         display: inline-block;
         padding-right: 3em;
+
     }
 
     .socialicon {
         width: 30px; 
+        padding-left: 10px;
     }
 
     #leftside {
         float: left;
-        width: 50%;
+        width: 0%;
         display: inline-block;
         background-color: #fff;
         padding-bottom: 50px;
-
+        margin-top: 30px;
     }
 
     button {
         width: 90px;
         background: transparent;
         border: none;
-        margin-top: 5px;
+        margin-top: 40px;
         margin-left: 37px;
+        padding-bottom: 10px;
     }
 
     #joinnow img {
@@ -580,10 +574,12 @@ br {
     }
 
     #socialbuttons {
-        padding-left: 240px;
+        padding-left: 0px;
         float: left;
         width: 110px;
         padding-top: 15px;
+        padding-left: 40px;
+        margin-top: 0px;
     }
 
     #socialbuttons img {
@@ -621,28 +617,242 @@ br {
     }
 
 
+    .footertext a {
+        text-decoration: none;
+    }
 
-    #emailsignup p {
-        padding-left: 43px;
-        padding-bottom: -20px;
-        font-size: 11px;
+    #socialbuttons a {
+        text-decoration: none;
+    }
 
+
+
+    /***tealbar***/
+
+    #tealbartext {
+        width: 100%; 
+        display: inline-block;
+        position: relative;
+        z-index: 5;
+    }
+
+    #copywrite {
+        color: #929395;
+        width: 100%;
+        padding-left: 40px;
+        margin-top: 220px;
+    }
+    
+    #email{
+     margin-top: 200px;
+     /* margin-right: 500px; */
+     margin-left: 100px;
+     /* margin-bottom: 5px; */
+     /* padding-bottom: 15px; */
+     /* padding-left: 100px; */
+     /* padding-right: 900px; */
+     /* padding-top: 15px; */
+     position: absolute;
+     font-family: 'contax_pro_45_ligregular', Helvetica, Arial, sans-serif;
+     font-size: 15px;
+     z-index: 5;
+     /* width: 700px; */
+     /* float: left; */
+     background-color: #fff;
+    }
+    
+    #email a {
+        color: #a4ddca;
+        padding-left: 10px;
+    }
+    
+    br {
+        display: block;
+        line-height:22px;
+    }
+
+    #end {
+display:none;
+    }
+    /***** MOBILE NAV ******/
+
+    nav { 
+        height: auto;
+    }
+    nav ul {
+        width: 100%;
+        height: inherit;
+        display: block;
+        height: auto;
+        margin-left: -40px;
+        padding: 0px;
+        text-align: center;
+    }
+    nav li {
+        width: 50%;
+        float: left;
+        position: relative;
+    }
+    nav li a {
+        border: none;
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+    }
+    nav li a:hover {
+        border: none;
+        width: 100%;
+        text-align: center;
+    }
+    nav a {
+        text-align: left;
+        width: 100%;
+
+    }
+}
+
+@media screen and (max-width : 500px){
+
+        .body {
+        width: 90%; 
+        height: 100%;
+    }
+
+    /** grey lines 8**/
+    .footerdivider {
+        display: none;
+    }
+
+    .upperdivider {
+        display: none; 
+    }
+
+    #homepp {
+        display: none;
+    }
+
+    #roundbuttons {
+        width: 80%;
+        display: inline;
+        padding: 0px;
+        margin-top: 10px;
+        margin-left: 15px;
+        margin-right: auto;
+    }    
+/****FOOTER*****/    
+    #footer {
+        margin-top: 250px;
+        background-color: #fff;
+    }
+
+    #rightside {
+        float: right;
+        width: 100%;
+        background-color: #fff;
+        padding-bottom: 50px;
+        padding-top: 10px;
+        padding-left: 10px;
+    }
+
+    #right {
+        float: right;
+        display: inline-block;
+        padding-right: 3em;
 
     }
 
-    input:placeholder-shown {
+    .socialicon {
+        width: 30px; 
+        padding-left: 10px;
+    }
+
+    #leftside {
+        float: left;
+        width: 0%;
+        display: inline-block;
+        background-color: #fff;
+        padding-bottom: 50px;
+    }
+
+    button {
+        width: 90px;
+        background: transparent;
+        border: none;
+        margin-top: 40px;
+        margin-left: 37px;
+        padding-bottom: 10px;
+    }
+
+    #joinnow img {
+        width: 100%; 
+    }
+
+    .footertext {
         font-family: 'contax_pro_45_ligregular', Helvetica, Arial, sans-serif;
         font-size: .75em;
+        color: #929395;
     }
 
-    input {
-        width: 150px; 
-        height: 20px;
-        margin-left: 43px;
+    #changesreturns {
+        float:right;
+        color: #929395;
+    }
+
+    #rightabout {
+        float: right;
+        color: #929395;
+    }
+
+    #changesreturns a{
+        color: #929395;
+    }
+
+    #rightabout a{
+        color: #929395;
+    }
+
+    #socialbuttons {
+        padding-left: 0px;
         float: left;
-        position: absolute; 
+        width: 110px;
+        padding-top: 15px;
+        padding-left: 40px;
+    }
+
+    #socialbuttons img {
+        padding-left: 2px;
+        padding-right: 2px;
+    }
+
+    #center {
+
+        width: 76px;
+
+        float: right;
+
+        margin-right: 40px;
+    }
+
+    #right {
+
+        width: 76px;
+
+        padding-right: .5em;
+        margin-left: -90px;
+        margin-right: -10px;
+    }
+
+    #right img{
+
+        margin-top: 5px;
 
     }
+
+    #center img{
+        margin-left: 10px;
+        margin-top: 5px;
+    }
+
 
     .footertext a {
         text-decoration: none;
@@ -659,52 +869,69 @@ br {
     #tealbartext {
         width: 100%; 
         display: inline-block;
-        position: absolute;
+        position: relative;
         z-index: 5;
-    }
-
-    #tealbar {
-        position: absolute;
-    }
-
-    #email a {
-
-        text-decoration: none;
-        color: #fff;
     }
 
     #copywrite {
-        color: #fff;
-        z-index: 5;
-        margin-top: 100px;
+        color: #929395;
+        width: 100%;
+        padding-left: 40px;
+    }
+    
+    #email{
+     margin-top: 150px;
+     margin-right: 500px;
+     margin-left: 0px;
+     padding-bottom: 15px;
+     padding-left: 100px;
+     padding-top: 15px;
+     position: absolute;
+     font-family: 'contax_pro_45_ligregular', Helvetica, Arial, sans-serif;
+     font-size: 15px;
+     z-index: 5;
+     /* width: 100%; */
+     float: left;
+    }
+    
+    #email a {
+        color: #19c589;
         padding-left: 10px;
-        position: absolute;
-        font-family: 'contax_pro_45_ligregular', Helvetica, Arial, sans-serif;
-        font-size: 15px;
-        z-index: 5;
-        width: 40%;
-        float: left;
-
-
     }
-
-    #email {
-
-        position: absolute;
-        font-family: 'contax_pro_45_ligregular', Helvetica, Arial, sans-serif;
-        font-size: 15px;
-        z-index: 5;
-        float: right;
-        padding-left: 0px;
-        width: 100px;
-        margin-right: 10px;
-        bottom: 30px;
-        color: #fff;
-
-    }
-
+    
     br {
         display: block;
         line-height:22px;
     }
+
+    #end {
+display:none;
+    }
+    
+    
+    
+    
+    
+/**** NAV ****/    
+    
+    /*Make dropdown links appear inline*/
+	nav ul {
+		position: static;
+		display: block;
+	}     
+        
+	/*Create vertical spacing*/
+	ul li {
+		margin-bottom: 1px;
+	}
+	/*Make all menu links full width*/
+	ul li, li a {
+		width: 100%;
+	}
+	/*Display 'show menu' link*/
+	.show-menu {
+		display:block;
+	}
 }
+
+
