--- a/plumstylesheet.css
+++ b/plumstylesheet.css
@@ -24,7 +24,7 @@ body {
     background-color: #fff;
     z-index:0;
     margin-top: -2em;
-    height: 1300px;
+    /* height: 1300px; */
 }
 
 #banner {
