--- a/plumstylesheet.css
+++ b/plumstylesheet.css
@@ -11,11 +11,12 @@ and open the template in the editor.
 
 body {
     background-image: url(images/background.jpg);
-    height: 1200px;
+    /* height: 1200px; */
     z-index: -1;
     margin-bottom: 0px;
     /* margin: 10px; */
 }
+
 
 .body {
     width: 1100px;
@@ -26,6 +27,8 @@ body {
     margin-top: -2em;
     /* height: 1300px; */
 }
+
+/***** HOME PAGE ******/
 
 #banner {
     display: block;
@@ -254,6 +257,34 @@ input[type=checkbox]:checked ~ #menu{
     display: block;
 }
 
+
+/**************ABOUT****************/
+.font {
+    font-family: 'contax_pro_45_ligregular', sans-serif;
+    font-size: 14px;
+    color: #929395;
+    text-align: center;
+}
+
+#abouttxt {
+    padding-left: 55px;
+    padding-right: 55px;
+    margin-top: 70px;
+    position: absolute;
+    width: 80%;
+}
+
+.header img{
+    position: absolute;
+    display: inline-block;
+    /* margin-left: 45px; */
+    text-align: center;
+    width: 82%;
+    margin-top: 20px;
+    margin-left: 45px;
+    margin-bottom: 20px;
+    
+}
 
 
 /**************FOOTER***************/
