--- a/plumstylesheet.css
+++ b/plumstylesheet.css
@@ -333,17 +333,17 @@ input[type=checkbox]:checked ~ #menu{
 }
 
 button {
-    width:17%;
+    width: 23%;
     background: transparent;
     border: none;
-    margin-top: -1px;
+    /* margin-top: -1px; */
     margin-left: 200px;
     /* padding-bottom: 10px; */
 }
 
 #joinnow img {
-    width: 100%; 
-
+    width: 100%;
+    /* margin-top: 5px; */
 }
 
 .footertext {
