--- a/plumstylesheet.css
+++ b/plumstylesheet.css
@@ -265,6 +265,38 @@ input[type=checkbox]:checked ~ #menu{
 }
 
 
+/****************************************FAQ********************/
+
+#supportbuttons {
+    display: inline-block;
+    position: relative;
+    margin: auto;
+    padding-top: 4em;
+    text-align: center;
+    padding-bottom: 1em;
+}
+
+.supportbutton {
+    width: 13%;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: 1em;
+}
+
+.supportbutton img {
+    width: 90%;
+    /* margin-left: 30px; */
+}
+
+.ajaxsupport {
+    width: 100%;
+}
+
+.hidden {
+     display:none;
+}
+
+
 /**************ABOUT****************/
 .font {
     font-family: 'contax_pro_45_ligregular', sans-serif;
